--- a/Day_001_HW.ipynb
+++ b/Day_001_HW.ipynb
@@ -172,10 +172,11 @@
     "1. 核心問題為何 (tips：如何定義 「提升業績 & 你的假設」)\n",
     "提升載客率 減少油料消耗 等等\n",
     "2. 資料從何而來 (tips：哪些資料可能會對你想問的問題產生影響 & 資料如何蒐集)\n",
-    "車輛的最佳路徑\n",
+    "車輛的最佳路徑，\n",
     "3. 蒐集而來的資料型態為何\n",
-    "\n",
-    "4. 你要回答的問題，其如何評估 (tips：你的假設如何驗證)"
+    "各路線的移動數據\n",
+    "4. 你要回答的問題，其如何評估 (tips：你的假設如何驗證)\n",
+    "可用迴歸方式取得衡 量指標"
    ]
   }
  ],
